Fixing the styling of the scrollbar in Chrome. Width is for vertical scrollbar, and height is for horizontal scrollbar.

--- a/web-ui/src/main/resources/catalog/views/default/less/gn_feedback_default.less
+++ b/web-ui/src/main/resources/catalog/views/default/less/gn_feedback_default.less
@@ -348,8 +348,8 @@ q, blockquote {
 
 // styling for the scrollbar
 ::-webkit-scrollbar {
-  width: 3px;
-  height: 3px;
+  width: 10px;
+  height: 10px;
 }
 // ----- track
 ::-webkit-scrollbar-track {
